# lm-tts

./: LICENSE  README.md  pyproject.toml  run_on_modal.py  tokenize_and_upload.py  tokenize_libritts_r.py
audio/: audio.py
model/: embedding.py  linear.py
modules/: Embedding.py  feed_forward.py  kv_cache.py  norm.py  position_embeddings.py  rms_norm.py
scripts/: analysis-by-synthesis.py  copy_synthesis.py  copy_synthesis_neucodec.py  run_tokenize_and_upload_on_modal.py  tokenize_and_upload.py  tokenize_libri_tts_r.py  tokenize_libritts_r.py  tokenize_libritts_r_modal.py
