[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets[audio]>=4.2.0",
    "einops>=0.8.1",
    "einx>=0.3.0",
    "jaxtyping>=0.3.3",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "ruff>=0.14.1",
]
