[project]
name = "lm-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets[audio]>=4.4.1",
    "neucodec>=0.0.4",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
]
