[project]
name = "lm-tts"
version = "0.1.0"
description = "Language modeling based Text-to-Speech"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
	"torch",
	"torchaudio",
	"transformers",
	"datasets",
	"neucodec",
    "ipython",
    "kernels",
]

[tool.uv.sources]
torch = [
	{ index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
	{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
	{ index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
	{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
